// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature flag screen should render FeatureFlagItem 1`] = `
<View
  testID="feature_loan_row"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingBottom": 16,
          "paddingLeft": 16,
          "paddingRight": 8,
          "paddingTop": 16,
        },
        Object {
          "backgroundColor": "rgba(255, 255, 255, 1)",
          "borderBottomColor": "rgba(229, 229, 229, 1)",
          "borderBottomWidth": 1,
          "borderLeftColor": "rgba(229, 229, 229, 1)",
          "borderRightColor": "rgba(229, 229, 229, 1)",
          "borderTopColor": "rgba(229, 229, 229, 1)",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontFamily": "RegularFont",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
          },
          Array [
            Object {
              "fontFamily": "MediumFont",
              "fontWeight": "500",
            },
            Object {
              "color": "rgba(0, 0, 0, 1)",
            },
          ],
        ]
      }
    >
      Decentralized Loans
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <RCTSwitch
        accessibilityRole="switch"
        onChange={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        onTintColor="#02B31B"
        style={
          Array [
            Object {
              "height": 31,
              "width": 51,
            },
            Object {
              "backgroundColor": "#E5E5E5",
              "borderRadius": 16,
            },
          ]
        }
        testID="feature_loan_switch"
        thumbTintColor="#FFFFFF"
        tintColor="#E5E5E5"
        value={true}
      />
    </View>
  </View>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "RegularFont",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        Array [
          Object {
            "fontFamily": "RegularFont",
            "fontSize": 14,
            "fontWeight": "400",
            "lineHeight": 20,
            "marginBottom": 8,
            "paddingBottom": 8,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 8,
          },
          Object {
            "color": "rgba(115, 115, 115, 1)",
          },
        ],
      ]
    }
  >
    Browse loan tokens provided by DeFiChain
  </Text>
</View>
`;

exports[`feature flag screen should render FeatureFlagScreen 1`] = `
<RCTScrollView
  style={
    Array [
      undefined,
      Object {
        "backgroundColor": "rgba(250, 250, 250, 1)",
      },
    ]
  }
  testID="features_flag_screen"
>
  <View>
    <View
      style={
        Object {
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
          "paddingBottom": 16,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 24,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "fontFamily": "SemiBoldFont",
                "fontSize": 16,
                "fontWeight": "600",
                "lineHeight": 24,
              },
              Object {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
          ]
        }
      >
        Beta Features
      </Text>
      <Text
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "fontFamily": "RegularFont",
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 20,
              },
              Object {
                "color": "rgba(115, 115, 115, 1)",
              },
            ],
          ]
        }
      >
        Beta feature(s) of Light Wallet represent features undergoing final testing before its official release. Experimentation of the feature(s) are encouraged, but caution is advised when using your assets.
      </Text>
    </View>
    <View
      testID="feature_loan_row"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingBottom": 16,
              "paddingLeft": 16,
              "paddingRight": 8,
              "paddingTop": 16,
            },
            Object {
              "backgroundColor": "rgba(255, 255, 255, 1)",
              "borderBottomColor": "rgba(229, 229, 229, 1)",
              "borderBottomWidth": 1,
              "borderLeftColor": "rgba(229, 229, 229, 1)",
              "borderRightColor": "rgba(229, 229, 229, 1)",
              "borderTopColor": "rgba(229, 229, 229, 1)",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "RegularFont",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              Array [
                Object {
                  "fontFamily": "MediumFont",
                  "fontWeight": "500",
                },
                Object {
                  "color": "rgba(0, 0, 0, 1)",
                },
              ],
            ]
          }
        >
          Decentralized Loans
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <RCTSwitch
            accessibilityRole="switch"
            onChange={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            onTintColor="#02B31B"
            style={
              Array [
                Object {
                  "height": 31,
                  "width": 51,
                },
                Object {
                  "backgroundColor": "#E5E5E5",
                  "borderRadius": 16,
                },
              ]
            }
            testID="feature_loan_switch"
            thumbTintColor="#FFFFFF"
            tintColor="#E5E5E5"
            value={true}
          />
        </View>
      </View>
      <Text
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Object {
                "fontFamily": "RegularFont",
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 20,
                "marginBottom": 8,
                "paddingBottom": 8,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 8,
              },
              Object {
                "color": "rgba(115, 115, 115, 1)",
              },
            ],
          ]
        }
      >
        Browse loan tokens provided by DeFiChain
      </Text>
    </View>
  </View>
</RCTScrollView>
`;
